<resources>

    <string-array name="spinner_filter_array">
        <item>All</item>
        <item>Track</item>
        <item>On Agenda</item>
    </string-array>

    <string name="app_name">By Invitation Only</string>
    <string name="facebook_app_id">969726059739337</string>
    <string name="action_settings">Settings</string>
    <string name="i_am_here">I\'m Here</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ad_confirmShare">Do you confirm the shared data?</string>
    <string name="error_connectivity">Don\'t exist connectivity. Try again later.</string>
    <string name="confirmation">Confirmation</string>
    <string name="pref_key_name">name</string>
    <string name="pref_key_email">email</string>
    <string name="title_activity_contact_settings">My Contact Settings</string>
    <string name="name">Name</string>
    <string name="email">E-mail</string>
    <string name="request_fill_name">Enter your full name</string>
    <string name="request_fill_email">Enter your E-mail</string>
    <string name="incomplete_data">Incomplete Data</string>
    <string name="ad_incomplete_data">Contact Data is incomplete.\nWould you like to complete them?</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_my_base">MyBaseActivity</string>
    <string name="warning">Warning!</string>
    <string name="ok">OK</string>
    <string name="title_activity_drawer">Navigator</string>
    <string name="title_homepage_fragment">Homepage</string>
    <string name="title_conference_schedule_fragment">Conference Schedule</string>
    <string name="title_who_is_here_fragment">Who is Here</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="back">Back</string>
    <string name="exit">Exit</string>
    <string name="search">Search</string>
    <string name="refresh">Refresh</string>
    <string name="disableSharing">Disable sharing</string>
    <string name="ad_disableSharing">Do not have the completed data! Just can not keep sharing the active contact.</string>
    <string name="loading">Loading…</string>
    <string name="toast_error_files">Error on reading files!</string>
    <string name="track">Track</string>
    <string name="date">Date</string>
    <string name="startHour">Start Hour</string>
    <string name="room">Room</string>
    <string name="endHour">End Hour</string>
    <string name="presenter">Presenter</string>
    <string name="abstrac">Abstract</string>
    <string name="titleView">Title</string>
    <string name="startHourView">Start Hour</string>
    <string name="roomView">Room</string>
    <string name="trackView">Track</string>
    <string name="presenterView">Presenter</string>
    <string name="abstractView">Abstract</string>
    <string name="endHourView">End Hour</string>
    <string name="title_activity_session_details">Session Details</string>
    <string name="filter">Filter</string>
    <string name="no_data">No data</string>
    <string name="request_filter_track">Please select which tracks you want to filter:</string>
    <string name="title_session_details">Session Details</string>
    <string name="contact">Contact</string>
    <string name="title_active_session_fragment">Active Sessions</string>
    <string name="no_active_sessions">No active Sessions at this moment</string>
    <string name="choseEmailClient">Choose an Email client:</string>
    <string name="noActivePersonsToNetworking">No active Persons to networking</string>
    <string name="title_activity_contact_chat">Chat</string>
    <string name="default_send_chat_message">Write your message…</string>
    <string name="title_empty_message">Empty Message</string>
    <string name="message_empty_message">You must type something in the message to send.</string>
    <string name="choose_who">Choose who you want to read:</string>
    <string name="notification_new_message">You have new message(s)</string>
    <string name="notification_people_message">People tried to talk to you!</string>
    <string name="checkbox_session_to_agenda">On Agenda</string>
    <string name="credits_team">Powered by: TeamOutOfBoundsException</string>
    <string name="title_agenda_fragment">My Agenda</string>
    <string name="myAgenda">My Agenda:</string>
    <string name="title_statistics_fragment">Statistics</string>
    <string name="confirmation_send_agenda">Are you sure you want to send your Agenda?</string>
    <string name="n_a_string">N/A</string>
    <string name="empty_agenda">Their agenda is empty, it has nothing to send.</string>
    <string name="conference_title_header_statistics">Conference</string>
    <string name="sessions_title_header_statistics">Sessions</string>

</resources>
