<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:id="@+id/list_session_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/details_separator"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:id="@+id/details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_session_details"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/large_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_view_session_details_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/titleView"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:textColor="@color/medium_text" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/large_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_details_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/titleView"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:textColor="@color/medium_text" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/startHour"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/large_text"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView_details_strat_hour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/textView2"
                    android:paddingEnd="0dp"
                    android:paddingStart="5dp"
                    android:text="@string/startHourView"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                    android:textColor="@color/medium_text" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_toEndOf="@+id/textView2"
                    android:text="@string/endHour"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/large_text"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView_details_hour_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/textView3"
                    android:layout_below="@+id/textView3"
                    android:paddingEnd="0dp"
                    android:paddingStart="5dp"
                    android:text="@string/endHourView"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                    android:textColor="@color/medium_text" />

            </RelativeLayout>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/room"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/large_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_details_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/roomView"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:textColor="@color/medium_text" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/track"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/large_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_details_track"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/trackView"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:textColor="@color/medium_text" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/presenter"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/large_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_details_presenter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/presenterView"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:textColor="@color/medium_text" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/abstrac"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/large_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_details_abstract"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/abstractView"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:textColor="@color/medium_text" />

        </LinearLayout>
    </ScrollView>

    <View
        android:id="@+id/details_separator"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_above="@+id/frameLayout"
        android:layout_marginTop="10dp"
        android:background="?android:attr/listDivider" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <CheckBox
            android:id="@+id/checkBoxDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:text="@string/checkbox_session_to_agenda" />

        <RatingBar
            android:id="@+id/ratingBarDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginStart="5dp"
            android:isIndicator="false"
            android:numStars="5" />

    </FrameLayout>

</RelativeLayout>